# tagthunder

./: .gitignore  Makefile  README.md  install.sh  package-lock.json  pyproject.toml  requirements.txt  setup.py
tagthunder/algorithms/: __init__.py  models.py
tagthunder/algorithms/cleaning/: __init__.py  _abstract.py  abstract.py  vision_based.py
tagthunder/algorithms/data/: scripts.py
tagthunder/algorithms/extraction/: __init__.py  _abstract.py  mots_blancs.py  yake.py
tagthunder/algorithms/models/: responses.py  web_elements.py
tagthunder/algorithms/segmentation/: __init__.py  _abstract.py  abstract.py  force_k_means.py  guided_expansion.py  guided_extension.py  k_means.py  tdbu.py  utils.py
tagthunder/api/: main.py  requirements.txt
tagthunder/api/configs/: algorithms.py
tagthunder/api/configurations/: __init__.py  api.py
tagthunder/api/models/: domains.py  factories.py  fields.py  responses.py  schemas.py
tagthunder/api/routers/: __init__.py  logics.py  queries.py  routes.py  services.py
tagthunder/api/services/: algorithms.py
tagthunder/api/tests/: test_routes.py
tagthunder/corpus/tools/: corpus_manager.py
tagthunder/javascript/html-augmentation/: index.js  package-lock.json  package.json
tagthunder/javascript/puppeteer-crawler/: Dockerfile  Makefile  build_docker.sh  config.js  crawler.js  index.js  make_container.sh  package-lock.json  package.json  run_docker.sh  server.js
tagthunder/pipeline/: README.md  __init__.py
tagthunder/webcrawler/: content_script.js  index.js  package-lock.json  wrapper.py
(+102 files in other folders)
