[tool.poetry]
name = "tagthunder-api"
version = "0.1.0"
description = ""
authors = ["François Ledoyen <francois.ledoyen@unicaen.fr>"]
readme = "README.md"
packages = [
	{include = "tagthunder"},
	{include = "api", from = "tagthunder"}
]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "0.20.0"
pydantic = "1.10.4"
dacite = "1.7.0"
email-validator = "1.3.0"
requests = "2.28.2"
urllib3 = "1.26.14"
lxml = "4.9.2"
html5lib = "1.1"
pandas = "1.5.2"
pillow = "9.4.0"
scikit-learn = "1.2.0"
matplotlib = "3.6.3"
gtts = "2.3.1"
langdetect = "1.0.9"
llvmlite = "0.39.1"
pydub = "0.25.1"
librosa = "0.9.2"
soundfile = "0.11.0"
pyopenal = "0.7.11a1"
yake = "0.4.8"
inscriptis = "2.3.2"
numba = "0.56.4"
toolz = "0.12.0"
googletrans = "4.0.0-rc1"
fastapi = "0.72.0"
beautifulsoup4 = "4.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tagthunder-api = "api.main:run"
